Change routing for home + add active class condition on navbar

--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -14,19 +14,19 @@
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link active" href="/">Home</a>
+                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/home']">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/pricing">Pricing</a>
+                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/pricing']">Pricing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/about-us">About Us</a>
+                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/about-us']">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/features">Features</a>
+                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/features']">Features</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/contact-us">Contact</a>
+                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/contact-us']">Contact</a>
                             </li>
                             <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
