--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,11 +1,13 @@
-<app-header></app-header>
-<div class="container">
-    <div class="left-pane">
-        <app-sidebar></app-sidebar>
-    </div>
-    <div class="right-pane">
-        <router-outlet></router-outlet>
-    </div>
-</div>
 
-<app-footer></app-footer>
+<div class="whitesmoke">
+    <div class="row row-container">
+        <div class="col-lg-2 col-md-4 col-xs-4">
+            <app-sidebar></app-sidebar>
+        </div>
+        <div class="col-lg-10 col-md-8 col-xs-8">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+    
+    <app-footer></app-footer>
+</div>
