--- a/src/app/company/layout/sidebar/sidebar.component.html
+++ b/src/app/company/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar-container">
+<div class="sidebar-container" [ngClass]="{'navbar-open' : sidebarOpen}">
   <div class="brand">
     <svg
       xmlns="http://www.w3.org/2000/svg"
