--- a/src/app/company/company.component.css
+++ b/src/app/company/company.component.css
@@ -2,8 +2,31 @@
     background-color: whitesmoke;
     height: 100%;
     width: 100%;
+    transition: transform 0.5s;
 }
 
 .row-container{
     height: 100%;
+}
+
+.navbar-open{
+    transition: all 0.5s;
+    transform: translateX(250px);
+}
+
+.navbar-toggle{
+    border: none;
+    outline: none;
+    background-color: white;
+    width: 50px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+.navbar-toggle i{
+    transition: transform 0.3s;
+}
+.navbar-toggle:active i{
+    transform: scale(0.8);
 }
