--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -3,7 +3,7 @@
 
     <div class="row-container">
             <button class="navbar-toggle" (click)="toggleSidebar()"><i class="ic fa fa-bars"></i></button>
-            
+            <div class="title-bar">{{getTitle()}}</div>
             <div style="padding: 10px;">
                 <router-outlet></router-outlet>
             </div>
