--- a/src/app/company/company.component.css
+++ b/src/app/company/company.component.css
@@ -23,10 +23,30 @@
     border-bottom-right-radius: 10px;
     cursor: pointer;
     transition: transform 0.3s;
+    position: absolute;
+    color: darkgray;
+    top: 7px;
 }
 .navbar-toggle i{
     transition: transform 0.3s;
 }
 .navbar-toggle:active i{
     transform: scale(0.8);
+}
+
+.title-bar{
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: lighter;
+    font-size: larger;
+    box-shadow: 0 6px 4px -4px rgb(0 0 0 / 15%);
+}
+
+.title-bar p{
+    height: 100%;
 }
