--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,5 +1,5 @@
 <app-sidebar [sidebarOpen] = "sidebarOpen"></app-sidebar>
-<div class="whitesmoke" [ngClass]="{'navbar-open' : sidebarOpen}" >
+<div class="whitesmoke">
 
     <div class="row-container">
             <button class="navbar-toggle" (click)="toggleSidebar()"><i class="ic fa fa-bars"></i></button>
