--- a/src/app/company/company.component.css
+++ b/src/app/company/company.component.css
@@ -7,6 +7,12 @@
 
 .row-container{
     height: 100%;
+    overflow-y: scroll;
+}
+
+.navbar-open{
+    transition: all 0.5s;
+    transform: translateX(250px);
 }
 
 .navbar-toggle{
