--- a/src/app/company/dashboard/dashboard.component.html
+++ b/src/app/company/dashboard/dashboard.component.html
@@ -25,6 +25,9 @@
             </div>
           </div>
         </div>
+        <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
       </div>
     </div>
 
@@ -64,6 +67,9 @@
             </div>
           </div>
         </div>
+        <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
       </div>
     </div>
 
@@ -94,6 +100,9 @@
             </div>
           </div>
         </div>
+        <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
       </div>
     </div>
 
@@ -127,7 +136,83 @@
             </div>
           </div>
         </div>
+        <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
       </div>
     </div>
   </div>
+
+  <div class="row row-content">
+    <div class="col-md-12 col-xs-12">
+      <div class="card">
+        <div class="card-body">
+          <p class="class-title">Response Graph</p>
+          <div class="card-text">
+            <img
+              class="img-fluid"
+              src="../../../assets/images/placeholder_graph.png"
+            />
+          </div>
+        </div>
+        <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row row-content">
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body">
+              <p class="class-title">First Response Time</p>
+              <div class="card-text">
+                <img
+                  class="img-fluid"
+                  src="../../../assets/images/placeholder_graph_2.png"
+                />
+              </div>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+          </div>
+    </div>
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body">
+              <p class="class-title">Resolution Time</p>
+              <div class="card-text">
+                <img
+                  class="img-fluid"
+                  src="../../../assets/images/placeholder_graph_4.png"
+                />
+              </div>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+          </div>
+    </div>
+
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-body">
+              <p class="class-title">Response Time</p>
+              <div class="card-text">
+                <img
+                  class="img-fluid"
+                  src="../../../assets/images/placeholder_graph_3.png"
+                />
+              </div>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+          </div>
+    </div>
+    
+  </div>
+
 </div>
