--- a/src/app/company/company.component.css
+++ b/src/app/company/company.component.css
@@ -1,13 +1,7 @@
 .whitesmoke{
     background-color: whitesmoke;
-    height: 100%;
     width: 100%;
     transition: transform 0.5s;
-}
-
-.row-container{
-    height: 100%;
-    overflow-y: scroll;
 }
 
 .navbar-open{
@@ -18,14 +12,14 @@
 .navbar-toggle{
     border: none;
     outline: none;
-    background-color: white;
+    background-color: #7d4ac7;
     width: 50px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     cursor: pointer;
     transition: transform 0.3s;
     position: absolute;
-    color: darkgray;
+    color: whitesmoke;
     top: 7px;
 }
 .navbar-toggle i{
@@ -38,8 +32,8 @@
 .title-bar{
     width: 100%;
     height: 50px;
-    background-color: white;
-    color: gray;
+    background: linear-gradient(to right, #7d4ac7 0%, #a733bb 100%);
+    color: whitesmoke;
     display: flex;
     justify-content: center;
     align-items: center;
