add navigation links

--- a/src/app/company/layout/sidebar/sidebar.component.html
+++ b/src/app/company/layout/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
     SyncBot
   </div>
   <ul class="nav-container">
-    <li class="active">
+    <li [routerLink]="['/company/dashboard']"[routerLinkActive]="'active'">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -34,7 +34,7 @@
       </svg>
       DASHBOARD
     </li>
-    <li>
+    <li [routerLink]="['/company/domain']"[routerLinkActive]="'active'">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -49,7 +49,7 @@
       </svg>
       DOMAIN
     </li>
-    <li>
+    <li [routerLink]="['/company/quicklinks']"[routerLinkActive]="'active'">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -64,7 +64,7 @@
       </svg>
       QUICKLINKS
     </li>
-    <li>
+    <li [routerLink]="['/company/agents']"[routerLinkActive]="'active'">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -80,7 +80,7 @@
       </svg>
       AGENTS
     </li>
-    <li>
+    <li [routerLink]="['/company/reporting']"[routerLinkActive]="'active'">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -98,7 +98,7 @@
       </svg>
       REPORTING
     </li>
-    <li>
+    <li [routerLink]="['/company/upload']"[routerLinkActive]="'active'">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -116,7 +116,7 @@
       </svg>
       UPLOAD
     </li>
-    <li>
+    <li [routerLink]="['/company/integration']"[routerLinkActive]="'active'">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
