--- a/src/app/company/dashboard/dashboard.component.html
+++ b/src/app/company/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard-container">
   <div class="row row-content">
-    <div class="mini-card">
+    <div class="col-xl-3 col-lg-6 col-md-6 col-xs-12">
       <div class="card">
         <div class="card-body">
           <p class="card-title">Agents</p>
@@ -8,8 +8,6 @@
             <div class="col-md-4">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="82.6px"
-                height="82.6px"
                 fill="currentColor"
                 class="bi bi-person-square card-icon-purple"
                 viewBox="0 0 16 16"
@@ -31,16 +29,14 @@
       </div>
     </div>
 
-    <div class="mini-card">
+    <div class="col-xl-3 col-lg-6 col-md-6 col-xs-12">
       <div class="card">
         <div class="card-body">
           <p class="card-title">Speed of Response</p>
           <div class="row">
-            <div class="col-md-4 col-xs-4">
+            <div class="col-lg-4 col-md-4 col-xs-4">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="82.6px"
-                height="82.6px"
                 fill="currentColor"
                 class="bi bi-speedometer2 card-icon-yellow"
                 viewBox="0 0 16 16"
@@ -54,7 +50,7 @@
                 />
               </svg>
             </div>
-            <div class="col-md-8 col-xs-8">
+            <div class="col-lg-8 col-md-8 col-xs-8">
               <p class="card-text">
                 1.0722 - <b>First Response </b><br />
 
@@ -73,7 +69,7 @@
       </div>
     </div>
 
-    <div class="mini-card">
+    <div class="col-xl-3 col-lg-6 col-md-6 col-xs-12">
       <div class="card">
         <div class="card-body">
           <p class="card-title">Incoming Conversations</p>
@@ -81,8 +77,6 @@
             <div class="col-md-4 col-xs-4">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="82.6px"
-                height="82.6px"
                 fill="currentColor"
                 class="bi bi-chat-left-text-fill card-icon-green"
                 viewBox="0 0 16 16"
@@ -106,7 +100,7 @@
       </div>
     </div>
 
-    <div class="mini-card">
+    <div class="col-xl-3 col-lg-6 col-md-6 col-xs-12">
       <div class="card">
         <div class="card-body">
           <p class="card-title">Up Time</p>
@@ -114,8 +108,6 @@
             <div class="col-md-4 col-xs-4">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="82.6px"
-                height="82.6px"
                 fill="currentColor"
                 class="bi bi-clock card-icon-orange"
                 viewBox="0 0 16 16"
