--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,10 +1,25 @@
 <app-sidebar [sidebarOpen] = "sidebarOpen"></app-sidebar>
 <div class="whitesmoke" [ngClass]="{'navbar-open' : sidebarOpen}" >
-
     <div>
             <button class="navbar-toggle" (click)="toggleSidebar()"><i class="ic fa fa-bars"></i></button>
-            <div class="title-bar">{{getTitle()}}</div>
-            <div >
+            <div class="title-bar">
+                <span>{{getTitle()}}</span>
+                <div class="dropdown show" id="logout-dropdown">
+                    <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                          </svg>
+                    </a>
+                  
+                    <div class="dropdown-menu dropdown-menu-left" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                  </div>  
+            </div>
+            <div class="navbar-container" [ngClass] = "{'navbar-open-container':sidebarOpen}">
                 <router-outlet></router-outlet>
             </div>
     </div>
