--- a/src/app/company/layout/sidebar/sidebar.component.css
+++ b/src/app/company/layout/sidebar/sidebar.component.css
@@ -2,7 +2,7 @@
     width: 250px;
     height: 100%;
     background-color: white;
-    position: absolute;
+    position: fixed;
     transition: all 0.5s;
     transform: translateX(-260px);
 }
