--- a/src/app/company/quicklinks/quicklinks.component.css
+++ b/src/app/company/quicklinks/quicklinks.component.css
@@ -3,6 +3,15 @@
     border-radius: 12px;
 }
 
+.row{
+    margin: 10px;
+    justify-content: center;
+}
+
+.form-text{
+    text-align: justify;
+}
+
 .card-title{
     color: gray;
 }
