domain, intents, logout & other components added

--- a/src/app/company/add-domain/add-domain.component.html
+++ b/src/app/company/add-domain/add-domain.component.html
@@ -3,7 +3,7 @@
         <div class="card">
             <div class="card-body">
                 <div class="card-title">
-                    Add Domains
+                    Create Domains
                 </div>
                 <!-- Form -->
                 <div class="row">
@@ -11,13 +11,13 @@
 
                     </div>
                     <div class="col-md-7">
-                        <p class="btn btn-secondary btn-style" [routerLink]="['/company/domain/create']"
+                        <p class="btn btn-secondary btn-style" [routerLink]="['/company/intents/create']"
                             [routerLinkActive]="'active'">
-                            <span class="fa fa-plus btn-padding"></span>Create Domain
+                            <span class="fa fa-plus btn-padding"></span>Create Intents
                         </p>
 
                         <p class="btn btn-secondary btn-style" style="margin-left: 20px;"><span
-                                class="fa fa-eye btn-padding"></span>View Intents</p>
+                                class="fa fa-eye btn-padding"></span>View Entity</p>
 
                     </div>
 
