--- a/src/app/pages/layout/header/header.component.html
+++ b/src/app/pages/layout/header/header.component.html
@@ -5,7 +5,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <a class="navbar-brand" href="index.html">
                         <img class="logo" src="../../../../assets/images/logo.png" alt="image">
-                        <img class="logo-stiky" src="../../../../assets/images/logo-stiky.png" alt="image">
+                        <img class="logo-stiky" src="../../../../assets/images/logo.png" alt="image">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,16 +17,20 @@
                                 <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/home']">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/pricing']">Pricing</a>
+                                <a class="nav-link" [routerLinkActive]="['active']"
+                                    [routerLink]="['/pricing']">Pricing</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/about-us']">About Us</a>
+                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/about-us']">About
+                                    Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/features']">Features</a>
+                                <a class="nav-link" [routerLinkActive]="['active']"
+                                    [routerLink]="['/features']">Features</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/contact-us']">Contact</a>
+                                <a class="nav-link" [routerLinkActive]="['active']"
+                                    [routerLink]="['/contact-us']">Contact</a>
                             </li>
                             <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
