--- a/src/app/company/add-domain/add-domain.component.css
+++ b/src/app/company/add-domain/add-domain.component.css
@@ -47,13 +47,16 @@
 }
 
 .navigator-domain{
-  background: #a733bb;
+  background: white;
   margin-bottom: 10px;
-  color: white !important;
+  color: black;
   border: none;
   outline: none;
+  box-shadow: 0 6px 10px -4px rgb(0 0 0 / 15%);
+  border-left: 0.5px solid lightgray;
 }
 
-.button-active {
+.button-active{
   background: #7d4ac7;
+  color: white;
 }
