--- a/src/app/company/domain/domain.component.css
+++ b/src/app/company/domain/domain.component.css
@@ -32,16 +32,19 @@
   color: rgb(136, 187, 144);
 }
 
-.navigator-domain{
-  background: #a733bb;
+.navigator-domain {
+  background: white;
   margin-bottom: 10px;
-  color: white !important;
+  color: black;
   border: none;
   outline: none;
+  box-shadow: 0 6px 10px -4px rgb(0 0 0 / 15%);
+  border-left: 0.5px solid lightgray;
 }
 
-.button-active{
+.button-active {
   background: #7d4ac7;
+  color: white;
 }
 
 .btn-padding {
