--- a/src/app/company/intents/create/create.component.css
+++ b/src/app/company/intents/create/create.component.css
@@ -17,3 +17,22 @@
   background: #7d4ac7;
   color: white;
 }
+
+.card {
+  box-shadow: 0 6px 10px -4px rgb(0 0 0 / 15%);
+  border-radius: 12px;
+}
+
+.btn-padding {
+  padding: 3px 9px 0px 0px;
+}
+
+.btn-style {
+  background: linear-gradient(to right, #7d4ac7 0%, #a733bb 100%);
+  color: white;
+}
+
+.btn-style:hover {
+  background: linear-gradient(to left, #7d4ac7 0%, #a733bb 100%);
+  color: white;
+}
