--- a/src/app/company/layout/sidebar/sidebar.component.html
+++ b/src/app/company/layout/sidebar/sidebar.component.html
@@ -63,7 +63,7 @@
       </svg>
       UPLOAD
     </li>
-    <li [routerLink]="['/company/integration']" [routerLinkActive]="'active'">
+    <li [routerLink]="['/company/web-link']" [routerLinkActive]="'active'">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-down"
         viewBox="0 0 16 16">
         <path fill-rule="evenodd"
