--- a/src/app/company/layout/sidebar/sidebar.component.html
+++ b/src/app/company/layout/sidebar/sidebar.component.html
@@ -34,7 +34,7 @@
       </svg>
       QUICKLINKS
     </li>
-    <li [routerLink]="['/company/agents']" [routerLinkActive]="'active'">
+    <li [routerLink]="['/company/add-agent']" [routerLinkActive]="'active'">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-person"
         viewBox="0 0 16 16">
         <path
