--- a/src/app/company/reporting/reporting.component.html
+++ b/src/app/company/reporting/reporting.component.html
@@ -1,83 +1,109 @@
 <div class="row">
-    <div class="col-md-11">
-        <div class="card">
-            <div class="card-body">
-                <div class="card-title">
-                    Reporting
-                </div>
-                <!-- Form -->
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="domain-select">From Date</label>
-                            <input type="date" class="form-control" id="message-input" aria-describedby="emailHelp" placeholder="Message">
-                            <small id="emailHelp" class="form-text text-muted">Select one domain from the domain dropdown</small>
-                          </div>
-                        <div class="form-group">
-                            <label for="quicklinks">Total User</label>
-                            <input type="text" class="form-control" id="quicklinks" aria-describedby="emailHelp" placeholder="User">
-                            <small id="emailHelp" class="form-text text-muted">Example: how are glacier caves formed?;how did apollo creed die;how a vul works;how much is 1 tablespoon of water;how much are the harry potter movies worth</small>
-                          </div>
-                    </div>
-                    <div class="col-md-6">
-
-                        <div class="form-group">
-                            <label for="message-input">To Date</label>
-                            <input type="date" class="form-control" id="message-input" aria-describedby="emailHelp" placeholder="Message">
-                            <small id="emailHelp" class="form-text text-muted">Example: how are glacier caves formed?;how did apollo creed die;how a vul works;how much is 1 tablespoon of water;how much are the harry potter movies worth</small>
-                          </div>
-
-                    </div>
-                </div>
-
-                <!-- Table -->
-                <div class="card">
-                    <div class="card-body">
-                        <div class="card-title">
-                            Report
-                        </div>
-                        <table class="table table-striped">
-                            <thead>
-                              <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">First</th>
-                                <th scope="col">Last</th>
-                                <th scope="col">Handle</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                              </tr>
-                              <tr>
-                                <th scope="row">3</th>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>@twitter</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                          <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                              <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                              <li class="page-item"><a class="page-link" href="#">1</a></li>
-                              <li class="page-item"><a class="page-link" href="#">2</a></li>
-                              <li class="page-item"><a class="page-link" href="#">3</a></li>
-                              <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                            </ul>
-                          </nav>
-                    </div>
-                </div>
+  <div class="col-md-11">
+    <div class="card">
+      <div class="card-body">
+        <div class="card-title">Reporting</div>
+        <!-- Form -->
+        <div class="row">
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="domain-select">From Date</label>
+              <input
+                type="date"
+                class="form-control"
+                id="message-input"
+                aria-describedby="emailHelp"
+                placeholder="Message"
+              />
+              <small id="emailHelp" class="form-text text-muted"
+                >Select one domain from the domain dropdown</small
+              >
             </div>
+            <div class="form-group">
+              <label for="quicklinks">Total User</label>
+              <input
+                type="text"
+                class="form-control"
+                id="quicklinks"
+                aria-describedby="emailHelp"
+                placeholder="User"
+              />
+              <small id="emailHelp" class="form-text text-muted"
+                >Example: how are glacier caves formed?;how did apollo creed
+                die;how a vul works;how much is 1 tablespoon of water;how much
+                are the harry potter movies worth</small
+              >
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label for="message-input">To Date</label>
+              <input
+                type="date"
+                class="form-control"
+                id="message-input"
+                aria-describedby="emailHelp"
+                placeholder="Message"
+              />
+              <small id="emailHelp" class="form-text text-muted"
+                >Example: how are glacier caves formed?;how did apollo creed
+                die;how a vul works;how much is 1 tablespoon of water;how much
+                are the harry potter movies worth</small
+              >
+            </div>
+          </div>
         </div>
+
+        <!-- Table -->
+        <div class="card">
+          <div class="card-body">
+            <div class="card-title">Report</div>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">First</th>
+                  <th scope="col">Last</th>
+                  <th scope="col">Handle</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Mark</td>
+                  <td>Otto</td>
+                  <td>@mdo</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Jacob</td>
+                  <td>Thornton</td>
+                  <td>@fat</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Larry</td>
+                  <td>the Bird</td>
+                  <td>@twitter</td>
+                </tr>
+              </tbody>
+            </table>
+            <nav aria-label="Page navigation example">
+              <ul class="pagination">
+                <li class="page-item">
+                  <a class="page-link" href="#">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#">Next</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
