--- a/src/app/company/quicklinks/quicklinks.component.html
+++ b/src/app/company/quicklinks/quicklinks.component.html
@@ -18,20 +18,56 @@
                               </select>
                             <small id="emailHelp" class="form-text text-muted">Select one domain from the domain dropdown</small>
                           </div>
-                        <div class="form-group">
-                            <label for="quicklinks">QuickLinks - separated by ; (semi-colon)</label>
-                            <input type="text" class="form-control" id="quicklinks" aria-describedby="emailHelp" placeholder="Quicklinks (comma separated)">
-                            <small id="emailHelp" class="form-text text-muted">Example: how are glacier caves formed?;how did apollo creed die;how a vul works;how much is 1 tablespoon of water;how much are the harry potter movies worth</small>
-                          </div>
-                    </div>
-                    <div class="col-md-6">
 
-                        <div class="form-group">
+                          <div class="form-group">
                             <label for="message-input">Message</label>
                             <input type="text" class="form-control" id="message-input" aria-describedby="emailHelp" placeholder="Message">
-                            <small id="emailHelp" class="form-text text-muted">Example: how are glacier caves formed?;how did apollo creed die;how a vul works;how much is 1 tablespoon of water;how much are the harry potter movies worth</small>
+                            <small id="emailHelp" class="form-text text-muted">Example: how are glacier caves formed?</small>
                           </div>
+                        
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="quicklinks">QuickLinks</label>
+                        <input type="text" class="form-control" id="quicklinks" [formControl] = "quickLinkText" aria-describedby="emailHelp" placeholder="Quicklink">
+                        <small id="emailHelp" class="form-text text-muted">Example: how are glacier caves formed?</small>
+                        <button [disabled]="quickLinkText.invalid" (click)="addQuickLink()" class="btn btn-success">Add</button>
+                        <button style="margin-left: 5px;" (click)="companyService.clearQuickLink()" class="btn btn-success">Clear</button>
+                      </div>
+                     
+                          
+                        <div class="form-group">
+                          <label for="message-input">Added Quicklinks</label>
+                          <div id="quicklinks-list">
+                            <div class="quicklinks-list-item row" *ngFor="let link of companyService.getQuickLinks(); let i = index">
+                              <div class="col-md-11">{{link}}</div>
+                              <div class="col-md-1">
+                                <svg (click) = "companyService.removeQuickLink(i)" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                              `</svg>
+                            </div>
+                              
+                            </div>
+                          </div>
+                        </div>
 
+                    </div>
+
+                    <button class="btn btn-primary">
+                      Submit
+                    </button>
+                    <div *ngIf="quickLinkText.invalid && (quickLinkText.dirty || quickLinkText.touched)" class="col-xs-12 col-md-12 alert alert-danger quicklinks-warning">
+
+                      <div *ngIf="quickLinkText.errors?.['required']">
+                        Quicklinks field is required
+                      </div>
+                      <div *ngIf="quickLinkText.errors?.['minlength']">
+                        Quicklinks Input must be at least 1 characters long.
+                      </div>
+                      <div *ngIf="quickLinkText.errors?.['whitespace']">
+                        Quicklinks Input only has whitespace characters
+                      </div>
                     </div>
                 </div>
 
