--- a/src/app/company/domain/domain.component.html
+++ b/src/app/company/domain/domain.component.html
@@ -1,28 +1,4 @@
 <div class="row">
-  <div class="btn-group" role="group" aria-label="Basic example">
-    <a
-      [routerLinkActiveOptions]="{ exact: true }"
-      [routerLink]="['/company/domain']"
-      [routerLinkActive]="'button-active'"
-      class="btn btn-secondary navigator-domain"
-      >View Domains</a
-    >
-    <a
-      [routerLinkActiveOptions]="{ exact: true }"
-      [routerLink]="['/company/domain/create']"
-      [routerLinkActive]="'button-active'"
-      class="btn btn-secondary navigator-domain"
-      >Create Domain</a
-    >
-    <a
-      [routerLinkActiveOptions]="{ exact: true }"
-      [routerLink]="['/company/intents/create']"
-      [routerLinkActive]="'button-active'"
-      class="btn btn-secondary navigator-domain"
-      >Create Intents</a
-    >
-  </div>
-
   <div class="col-md-11">
     <div class="card">
       <div class="card-body">
@@ -39,7 +15,12 @@
               <span class="fa fa-plus btn-padding"></span>Create Domain
             </p>
 
-            <p class="btn btn-secondary btn-style" style="margin-left: 20px">
+            <p
+              [routerLink]="['/company/intents']"
+              [routerLinkActive]="'active'"
+              class="btn btn-secondary btn-style"
+              style="margin-left: 20px"
+            >
               <span class="fa fa-eye btn-padding"></span>View Intents
             </p>
           </div>
