add fetch for domain info

--- a/src/app/company/domain/domain.component.html
+++ b/src/app/company/domain/domain.component.html
@@ -28,35 +28,22 @@
 
         <!-- Table -->
         <div class="card">
-          <div class="card-body">
+          <div id="table-card" class="card-body">
             <div class="card-title">View Added Quicklinks</div>
-            <table class="table table-striped">
+            <div *ngIf="domainsLoading" class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+            <table *ngIf="!domainsLoading" class="table table-striped">
               <thead>
                 <tr>
                   <th scope="col">#</th>
-                  <th scope="col">First</th>
-                  <th scope="col">Last</th>
-                  <th scope="col">Handle</th>
+                  <th scope="col">Domain</th>
+                  <th scope="col">Client</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
+                <tr *ngFor="let domains of domainsList;let i = index">
+                  <th scope="row">{{i+1}}</th>
+                  <td>{{domains.domain}}</td>
+                  <td>{{domains.client}}</td>
                 </tr>
               </tbody>
             </table>
