--- a/src/app/company/intents/create/create.component.html
+++ b/src/app/company/intents/create/create.component.html
@@ -2,73 +2,154 @@
   <div class="col-md-11">
     <div class="card">
       <div class="card-body">
-        <div class="card-title">Create Intity</div>
-        <!-- Form -->
-        <div class="row">
-          <div class="col-md-1"></div>
-          <div class="col-md-7">
-            <p
-              class="btn btn-secondary btn-style"
-              [routerLink]="['/company/intents/create']"
-              [routerLinkActive]="'active'"
-            >
-              <span class="fa fa-plus btn-padding"></span>Create Intents
-            </p>
-
-            <p class="btn btn-secondary btn-style" style="margin-left: 20px">
-              <span class="fa fa-eye btn-padding"></span>View Entity
-            </p>
-          </div>
+        <div class="card-title">
+          Create Intents<br />
+          <small id="title-small-text">
+            Intents are grouped user sayings with a similar purpose. For example
+            a user may say, "I want to order a cheese pizza and that may be
+            labeled with an intent of Order Pizza
+          </small>
         </div>
 
-        <!-- Table -->
-        <div class="card">
-          <div class="card-body">
-            <div class="card-title">View Added Quicklinks</div>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">First</th>
-                  <th scope="col">Last</th>
-                  <th scope="col">Handle</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-                </tr>
-              </tbody>
-            </table>
-            <nav aria-label="Page navigation example">
-              <ul class="pagination">
-                <li class="page-item">
-                  <a class="page-link" href="#">Previous</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="#">Next</a>
-                </li>
-              </ul>
-            </nav>
+        <!-- Form -->
+        <div class="row">
+          <!-- Intent Name -->
+          <div class="col-xs-12 col-md-12 col-lg-12">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Intent Name</label>
+              <input
+                type="text"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                placeholder="Enter email"
+              />
+              <small id="emailHelp" class="form-text text-muted"
+                >Example: Loan, Services, Greeting etc.</small
+              >
+            </div>
           </div>
+
+          <!-- User Messages List -->
+          <div class="col-xs-12 col-md-12 col-lg-6">
+            <div class="form-group">
+              <label for="exampleInputEmail1">User Message</label>
+              <div class="input-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Enter message a user can enter during chat"
+                  aria-label="Recipient's username"
+                  aria-describedby="basic-addon2"
+                  [formControl]="userMessage"
+                />
+                <div class="input-group-append">
+                  <button (click)="addMessage()" [disabled] ="userMessage.invalid" class="btn btn-success" type="button">
+                    Add
+                  </button>
+                </div>
+              </div>
+
+              <small id="emailHelp" class="form-text text-muted"
+                >Click Add button to create new messages for intent
+                specified.</small
+              >
+            </div>
+          </div>
+          <!-- List -->
+          <div class="col-xs-12 col-md-12 col-lg-6">
+            <div class="form-group">
+              <label for="message-input">Added User Messages</label>
+              <div id="quicklinks-list">
+                <div class="quicklinks-list-item row" *ngFor="
+                    let message of companyService.getUserMessages();
+                    let i = index
+                  ">
+                  <div class="col-md-11">{{ message }}</div>
+                  <div class="col-md-1">
+                    <svg (click)="companyService.removeUserMessages(i)" xmlns="http://www.w3.org/2000/svg" width="16"
+                      height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                      <path
+                        d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                      <path fill-rule="evenodd"
+                        d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+                      `
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Related Domain -->
+          <div class="col-xs-12 col-md-12 col-lg-12">
+            <div class="form-group">
+              <label>Select Related Domain</label>
+              <select class="custom-select" size="3">
+                <option value="0">Zero</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- Response to User List -->
+          <div class="col-xs-12 col-md-12 col-lg-6">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Response to User</label>
+              <div class="input-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Enter message to be used as response"
+                  aria-label="Recipient's username"
+                  aria-describedby="basic-addon2"
+                  [formControl]="responseMessage"
+                />
+                <div class="input-group-append">
+                  <button (click)="addResponseMessage()" [disabled] ="responseMessage.invalid" class="btn btn-success" type="button">
+                    Add
+                  </button>
+                </div>
+              </div>
+
+              <small id="emailHelp" class="form-text text-muted"
+                >Click Add button to create new messages for response to user.</small
+              >
+            </div>
+          </div>
+          <!-- List -->
+          <div class="col-xs-12 col-md-12 col-lg-6">
+            <div class="form-group">
+              <label for="message-input">Added Response Messages</label>
+              <div id="quicklinks-list">
+                <div class="quicklinks-list-item row" *ngFor="
+                    let message of companyService.getResponseMessages();
+                    let i = index
+                  ">
+                  <div class="col-md-11">{{ message }}</div>
+                  <div class="col-md-1">
+                    <svg (click)="companyService.removeResponseMessages(i)" xmlns="http://www.w3.org/2000/svg" width="16"
+                      height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                      <path
+                        d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                      <path fill-rule="evenodd"
+                        d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+                      `
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-4 col-md-3 col-lg-2">
+            <div class="form-group">
+              <button type="button" class="btn btn-success">Submit</button>
+            </div>
+          </div>
+          
         </div>
       </div>
     </div>
