--- a/src/app/company/intents/create/create.component.html
+++ b/src/app/company/intents/create/create.component.html
@@ -9,6 +9,10 @@
             a user may say, "I want to order a cheese pizza and that may be
             labeled with an intent of Order Pizza
           </small>
+          <br/>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            Help
+          </button>
         </div>
 
         <!-- Form -->
@@ -22,7 +26,8 @@
                 class="form-control"
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
-                placeholder="Enter email"
+                placeholder="Enter Intent Name"
+                [formControl] = "intentName"
               />
               <small id="emailHelp" class="form-text text-muted"
                 >Example: Loan, Services, Greeting etc.</small
@@ -85,11 +90,8 @@
           <div class="col-xs-12 col-md-12 col-lg-12">
             <div class="form-group">
               <label>Select Related Domain</label>
-              <select class="custom-select" size="3">
-                <option value="0">Zero</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+              <select [formControl]="selectedDomain" class="custom-select" size="3">
+                <option *ngFor="let domainsVar of domainsList" [ngValue]="domainsVar.domain">{{domainsVar.domain}}</option>
               </select>
             </div>
           </div>
@@ -146,11 +148,31 @@
 
           <div class="col-xs-4 col-md-3 col-lg-2">
             <div class="form-group">
-              <button type="button" class="btn btn-success">Submit</button>
+              <button (click)="submitForm()" type="button" class="btn btn-success">Submit</button>
             </div>
           </div>
           
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" data-backdrop="false" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Help</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img id="help-image" src="../../../../assets/images/intent.jpg" />
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
