--- a/src/app/company/intents/list/list.component.html
+++ b/src/app/company/intents/list/list.component.html
@@ -23,35 +23,33 @@
   
           <!-- Table -->
           <div class="card">
-            <div class="card-body">
-              <div class="card-title">View Added Quicklinks</div>
+            <div id="intent-table-container" class="card-body">
+              <div class="card-title">View Added Intents</div>
               <table class="table table-striped">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">Intent</th>
+                    <th scope="col">Domain</th>
+                    <th scope="col">User Message</th>
+                    <th scope="col">Response Message</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
+                  <tr *ngFor="let intentVar of intentList; let i = index;">
+                    <th scope="row">{{i}}</th>
+                    <td>{{intentVar.intent}}</td>
+                    <td>{{intentVar.domain}}</td>
+                    <td>
+                        <ul>
+                            <li *ngFor="let userMessage of intentVar.user_say.split(';')">{{userMessage}}</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li *ngFor="let userMessage of intentVar.response.split(';')">{{userMessage}}</li>
+                        </ul>
+                    </td>
                   </tr>
                 </tbody>
               </table>
