add entity components and integrate get endpoint in view page

--- a/src/app/company/intents/list/list.component.html
+++ b/src/app/company/intents/list/list.component.html
@@ -15,7 +15,11 @@
                 <span class="fa fa-plus btn-padding"></span>Create Intents
               </p>
   
-              <p class="btn btn-secondary btn-style" style="margin-left: 20px">
+              <p 
+              class="btn btn-secondary btn-style"
+              [routerLink]="['/company/entities']"
+              [routerLinkActive]="'active'"
+              class="btn btn-secondary btn-style" style="margin-left: 20px">
                 <span class="fa fa-eye btn-padding"></span>View Entity
               </p>
             </div>
