--- a/src/app/company/layout/sidebar/sidebar.component.html
+++ b/src/app/company/layout/sidebar/sidebar.component.html
@@ -104,9 +104,9 @@
       </span>
     </li>
     <ul class="nav-container-child" *ngIf="entityOpen">
-      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/entity']" [routerLinkActive]="'active'">
+      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/entities']" [routerLinkActive]="'active'">
         View</li>
-      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/entity/create']"
+      <li [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/company/entities/create']"
         [routerLinkActive]="'active'">Create</li>
     </ul>
 
