--- a/src/app/company/entity/view/view.component.html
+++ b/src/app/company/entity/view/view.component.html
@@ -1,1 +1,70 @@
-<p>view works!</p>
+<div class="row">
+    <div class="col-md-11">
+      <div class="card">
+        <div class="card-body">
+          <div class="card-title">View Entities</div>
+          <!-- Form -->
+          <div class="row">
+            <div class="col-md-2">
+              <p
+                class="btn btn-secondary btn-style"
+                [routerLink]="['/company/entities/create']"
+                [routerLinkActive]="'active'"
+              >
+                <span class="fa fa-plus btn-padding"></span>Create Entity
+              </p>
+            </div>
+          </div>
+  
+          <!-- Table -->
+          <div class="card">
+            <div id="intent-table-container" class="card-body">
+              <div class="card-title">View Added Entities</div>
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Entity Name</th>
+                    <th scope="col">Entity Word</th>
+                    <th scope="col">Message</th>
+                    <th scope="col">Response</th>
+                    <th scope="col">Intent</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let entityVar of entityList; let i = index;">
+                    <th scope="row">{{i}}</th>
+                    <td>{{entityVar.entity_name}}</td>
+                    <td>{{entityVar.entity_word}}</td>
+                    <td>
+                        {{entityVar.message}}
+                    </td>
+                    <td>
+                        {{entityVar.response}}
+                    </td>
+                    <td>
+                        {{entityVar.intent}}
+                    </td>
+                  </tr> 
+                </tbody>
+              </table>
+              <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                  <li class="page-item">
+                    <a class="page-link" href="#">Previous</a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="#">1</a></li>
+                  <li class="page-item"><a class="page-link" href="#">2</a></li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                  <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
