--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -53,11 +53,11 @@
                             <ul id="price-listing"class="mt-5">
                                 <li *ngFor="let planFeatures of plan['features']">
                                     <ng-container *ngIf="planFeatures['value']!=false;else elseTimes">
-                                        <span class="fa fa-check"></span>
+                                        <span class="fa fa-check"></span>&nbsp;
 
                                     </ng-container>
                                     <ng-template #elseTimes>
-                                        <span class="fa fa-times"></span>
+                                        <span class="fa fa-times"></span>&nbsp;
                                     </ng-template>
                                     <span class="time-of-year">
                                         {{ planFeatures['key']}}
