--- a/src/app/company/entity/create/create.component.html
+++ b/src/app/company/entity/create/create.component.html
@@ -144,7 +144,7 @@
 
           <div class="col-xs-12 col-md-12 col-lg-12">
             <div class="form-group">
-              <label>Select Related Domain</label>
+              <label>Select Related Itent</label>
               <select
                 [formControl]="selectedDomain"
                 class="custom-select"
