integrate endpoints and spinner in entity, intents and domains

--- a/src/app/company/intents/create/create.component.html
+++ b/src/app/company/intents/create/create.component.html
@@ -172,7 +172,7 @@
         <img id="help-image" src="../../../../assets/images/intent.jpg" />
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-style" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
