--- a/src/app/company/entity/create/create.component.html
+++ b/src/app/company/entity/create/create.component.html
@@ -55,7 +55,8 @@
                 />
                 <div class="input-group-append">
                   <button
-                    [disabled]="userMessage.invalid"
+                    (click) ="addEntityWord()"
+                    [disabled]="entityWord.invalid"
                     class="btn btn-success"
                     type="button"
                   >
@@ -72,19 +73,19 @@
           <!-- List -->
           <div class="col-xs-12 col-md-12 col-lg-6">
             <div class="form-group">
-              <label for="message-input">Added Entities</label>
+              <label for="message-input">Added Entity Words</label>
               <div id="quicklinks-list">
                 <div
                   class="quicklinks-list-item row"
                   *ngFor="
-                    let message of companyService.getUserMessages();
+                    let message of companyService.getEntityWords();
                     let i = index
                   "
                 >
                   <div class="col-md-11">{{ message }}</div>
                   <div class="col-md-1">
                     <svg
-                      (click)="companyService.removeUserMessages(i)"
+                      (click)="companyService.removeEntityWords(i)"
                       xmlns="http://www.w3.org/2000/svg"
                       width="16"
                       height="16"
@@ -144,17 +145,17 @@
 
           <div class="col-xs-12 col-md-12 col-lg-12">
             <div class="form-group">
-              <label>Select Related Itent</label>
+              <label>Select Related Intent</label>
               <select
-                [formControl]="selectedDomain"
+                [formControl]="selectedIntent"
                 class="custom-select"
                 size="3"
               >
                 <option
-                  *ngFor="let domainsVar of domainsList"
-                  [ngValue]="domainsVar.domain"
+                  *ngFor="let intentsVar of intentList"
+                  [ngValue]="intentsVar.intent"
                 >
-                  {{ domainsVar.domain }}
+                  {{ intentsVar.intent }}
                 </option>
               </select>
             </div>
@@ -162,7 +163,7 @@
 
           <div class="col-xs-4 col-md-3 col-lg-2">
             <div class="form-group">
-              <button type="button" class="btn btn-success">Submit</button>
+              <button [disabled]="form.invalid" (click)="submitForm()" type="button" class="btn btn-success">Submit</button>
             </div>
           </div>
         </div>
@@ -198,7 +199,7 @@
         <img id="help-image" src="../../../../assets/images/entity.png" />
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+        <button type="button" class="btn btn-style" data-dismiss="modal">
           Close
         </button>
       </div>
